@@ -1378,16 +1378,27 @@ void Ifix_game_object::remove_this
 
 void Ifix_game_object::write_ifix
 	(
-	DataSource *ifix			// Where to write.
+	DataSource *ifix,			// Where to write.
+	bool v2					// More shapes/frames allowed.
 	)
 	{
-	unsigned char buf[4];
+	unsigned char buf[5];
 	buf[0] = (tx<<4)|ty;
 	buf[1] = lift;
 	int shapenum = get_shapenum(), framenum = get_framenum();
-	buf[2] = shapenum&0xff;
-	buf[3] = ((shapenum>>8)&3) | (framenum<<2);
-	ifix->write((char*)buf, sizeof(buf));
+	if (v2)
+		{
+		buf[2] = shapenum&0xff;
+		buf[3] = (shapenum>>8)&0xff;
+		buf[4] = framenum;
+		ifix->write((char*)buf, 5);
+		}
+	else
+		{
+		buf[2] = shapenum&0xff;
+		buf[3] = ((shapenum>>8)&3) | (framenum<<2);
+		ifix->write((char*)buf, 4);
+		}
 	}
 
 
